1998-09-11  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi-child.c (gnome_mdi_child_set_name): moved the
	gnome_mdi_rename_child()'s functionality here.
	* gnome-mdi.c (gnome_mdi_rename_child): removed.
	(child_list_activated_cb, gnome_mdi_set_active_view): moved
	much of the former to the latter.
	(app_set_view, app_create): when uisng GnomeUIInfo templates to
	create menus and the toolbar, the MDI menus and toolbar are now
	set up with a gnome_app_create_*_with_data() call so that relevant
	callbacks are passed a pointer to the MDI as data. in a similar
	manner the child specific menus' callbacks are passed a pointer to
	the child.
	
1998-09-09  Havoc Pennington  <hp@pobox.com>

	* gnome-gtk-utils.h: Cleanup. Added copyright (FSF? I guess so.)
	Added GNOME_BEGIN_DECLS (took me an hour to figure out that was
	causing gnome-- breakage). Made include guards consistent with
	other headers.

1998-09-09  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-dentry-edit.c: Protect inclusion of `gnomesupport.h' with
	NEED_GNOMESUPPORT_H. 

Tue Sep  8 22:54:31 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-dentry-edit.c: Include gnomesupport.h for strndup.

1998-09-06  Martin Baulig  <martin@home-of-linux.org>

	* gnome-mdi.c (gnome_mdi_set_mode, rootwin_drop): Make the newly
	created windows have the same size the current view had before.

	* gnome-mdi.h (gnome_mdi_active_view): New function.
	(gnome_mdi_set_active_view): New function.

	* gnome-mdi.c: Renamed static `gnome_mdi_set_active_view()'
 	to `set_active_view()' and added new global function
 	`gnome_mdi_set_active_view()'.

Fri Sep 04 17:53:41 1998  George Lebl  <jirka@5z.com>

	* gnome-color-picker.c: initialize use_alpha

1998-09-03  Martin Baulig  <martin@home-of-linux.org>

	* gnome-font-selector.c (gnome_font_select_with_default): New
	function. Same as gnome_font_select () but let you give a
	default font.

Thu Sep  3 05:47:19 1998  Tim Janik  <timj@gtk.org>
